--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "simple-http-assignment-start-master",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.18.3",
+    "npm": "6.14.6"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
