--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node ./src/server.js",
     "pretest": "eslint ./src --fix",
-    "test": "echo \"Test complete"
+    "test": "echo \"Test complete\""
   },
   "repository": {
     "type": "git",
